--- a/client/app/feature/lists/wishList.html
+++ b/client/app/feature/lists/wishList.html
@@ -145,7 +145,7 @@
 	            </div>
 	            <div class="col-lg-7" style="padding:10px 40px;font-size: 16px">
 	                <div>TV</div>
-	                <div>item Id: 1002431</div>
+	                <div>item Id: <a ui-sref="shareeconomy.itemDetail({itemId:'1002431'})">1002431</a></div>
 	                <div style="font-size: 80%;margin-top:10px">
 	                    <div>
 	                        <label style="display:inline-block;">Preferred EST Price:</label> <span>15$ </span>
