--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 
     </header>
     <body ng-app="app" >
-        <div  ui-view ></div>
+        <div  ui-view style="" class="div-center"></div>
         <!--bower-->
         <script src="/bower_components/angular/angular.min.js"></script>
         <script src="/bower_components/jquery/dist/jquery.min.js"></script>
