--- a/client/app/feature/itemDetail/itemDetail.html
+++ b/client/app/feature/itemDetail/itemDetail.html
@@ -7,7 +7,7 @@
                 Get Bidded
             </div>
         </div>
-        <div class="col-lg-6" style="padding:10px 40px;font-size: 17px">
+        <div class="col-lg-6" style="padding:10px 40px;font-size: 17px;border-right:1px lightgray solid">
         	<div>Item Id: {{vm.itemDetail.itemId}}</div>
             <div>{{vm.itemDetail.itemTitle}}</div>
             <div style="font-size:90%">by <a ui-sref="shareeconomy.visitorReview({user:'Moyu Liang'})">{{vm.itemDetail.sellerBy}}</a></div>
@@ -16,7 +16,7 @@
                 	<uib-rating ng-model="vm.itemDetail.rate" max="5" read-only="true" ></uib-rating>
                 	<label style="">Reviewed By:</label><a style="font-size:16px">{{vm.itemDetail.reviewedNum}} Customers</a>
                 	<label style="border-left:1px solid lightgrey;">Answered Questions:</label> <a style="font-size:16px" ng-click="vm.goToAnswerQuestion()">{{vm.itemDetail.questionsNum}} </a>
-                	<br>
+                	<hr style="margin-top:0px">
                 	<label style="">Collected By:</label> <a style="font-size:16px">{{vm.itemDetail.collectedNum}} customers </a>
 
                     <label style="border-left:1px solid lightgrey;display:inline-block;padding-left: 10px">Bargain With:</label> <a style="font-size:16px">{{vm.itemDetail.bargainNum}} customers </a>
@@ -29,7 +29,7 @@
                     <br>
                     <panel class="col-lg-12" style='font-size: 13px'>
                         <ul style="padding-left:20px">
-                            <li ng-repeat='description in vm.itemDetail.descriptions'>
+                            <li ng-repeat='description in vm.itemDetail.descriptions' style="text-align:justify">
                                 {{description}}
                             </li>
                         </ul>
@@ -58,14 +58,14 @@
 	    		<div>
 		    		<div>
 		    			<div class="col-lg-2" style="font-weight:bold;font-size:15px">Question: </div>
-		    			<div class="col-lg-10" style="padding-left:15px">{{question.questionTitle}}</div>
+		    			<div class="col-lg-10" style="padding-left:15px"><a>{{question.questionTitle}}</a></div>
 		    		</div>
 	    			<br><br>
 	    			<div>
 		    			<div class="col-lg-2" style="font-weight:bold;font-size:15px;clear:both">Answer: </div>
 		    			<div class="col-lg-10" style="float:right;padding-bottom:10px" ng-repeat="answer in question.answers" ng-show="$index<=vm.showAnswerNum[$parent.$index]">
 		    				<span>{{answer.answerContent}}</span><br>
-		    				<a style="font-size:13px" ng-click="vm.openEditCommentsModal($parent.$index, $index,'#commentModal')">See The Comments on This Answer</a>
+		    				<a style="font-size:13px;color:#ff4400" ng-click="vm.openEditCommentsModal($parent.$index, $index,'#commentModal')">See The Comments on This Answer</a>
 		    				<div style="float:right;font-size:13px">By <a>{{answer.answerBy}}</a> on May 26, 2015</div>
 		    				<hr style="clear:both;margin-top:20px">
 		    			</div>
