--- a/client/app/feature/itemDetail/itemDetail.html
+++ b/client/app/feature/itemDetail/itemDetail.html
@@ -10,31 +10,72 @@
         <div class="col-lg-6" style="padding:10px 40px;font-size: 17px;border-right:1px lightgray solid">
         	<div>Item Id: {{vm.itemDetail.itemId}}</div>
             <div>{{vm.itemDetail.itemTitle}}</div>
-            <div style="font-size:90%">by <a ui-sref="shareeconomy.visitorReview({user:'Moyu Liang'})">{{vm.itemDetail.sellerBy}}</a></div>
+            <div style="font-size:90%;width:200px;display:inline-block">
+                by <a ui-sref="shareeconomy.visitorReview({user:'Moyu Liang'})">{{vm.itemDetail.sellerBy}}</a>
+                <span uib-rating 
+                    ng-model="vm.itemDetail.rate" 
+                    max="5" 
+                    read-only="true" 
+                    popover-placement="right" 
+                    uib-popover-template="'app/feature/itemDetail/popOver/ratePopOver.html'"
+                    popover-trigger="'mouseenter'"
+                    style="position:absolute;padding-left:15px;margin-top:2px;color:#f2ae44">
+                </span>
+            </div>
+            <div style="display:inline-block;padding-left:20px">
+                <label>Answered Questions:</label> <a style="font-size:16px" ng-click="vm.goToAnswerQuestion()">{{vm.itemDetail.questionsNum}} </a>
+            </div>
             <div style="font-size: 80%;margin-top:10px">
-                <div>
-                	<uib-rating ng-model="vm.itemDetail.rate" max="5" read-only="true" ></uib-rating>
-                	<label style="">Reviewed By:</label><a style="font-size:16px">{{vm.itemDetail.reviewedNum}} Customers</a>
-                	<label style="border-left:1px solid lightgrey;">Answered Questions:</label> <a style="font-size:16px" ng-click="vm.goToAnswerQuestion()">{{vm.itemDetail.questionsNum}} </a>
-                	<hr style="margin-top:0px">
-                	<label style="">Collected By:</label> <a style="font-size:16px">{{vm.itemDetail.collectedNum}} customers </a>
-
-                    <label style="border-left:1px solid lightgrey;display:inline-block;padding-left: 10px">Bargain With:</label> <a style="font-size:16px">{{vm.itemDetail.bargainNum}} customers </a>
-                    <br>
-                    <label style="">Seller EST Price:</label> <span style="font-size:16px;color:#f2ae44">${{vm.itemDetail.sellerEstPrice}} </span>
-                    <br>
-                    <label style="">Brand New Item in Market:</label> <span style="font-size:16px;color:#f2ae44">${{vm.itemDetail.newItemPrice}}  </span><a style="padding-left:10px" href="https://www.amazon.com/dp/B01BGC39JY/ref=s9_acss_bw_hsb_TVBBWK35_s3_n?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-3&pf_rd_r=YTR1AECWZFHENKVZHY8G&pf_rd_t=101&pf_rd_p=2596992402&pf_rd_i=1266092011" target="_blank"> Check same item in amazon</a>
-                    <br>
-                    <label>Items Description:</label>
-                    <br>
-                    <panel class="col-lg-12" style='font-size: 13px'>
-                        <ul style="padding-left:20px">
-                            <li ng-repeat='description in vm.itemDetail.descriptions' style="text-align:justify">
-                                {{description}}
-                            </li>
-                        </ul>
-                    </panel>
+            	<hr style="margin-top:0px">
+            	<label style="">Collected By:</label> <a style="font-size:16px">{{vm.itemDetail.collectedNum}} customers </a>
+                <br>
+                <label style="">Bargain With:</label> <a style="font-size:16px" ng-click="vm.showBargainDetail = !vm.showBargainDetail"><i class="fa fa-caret-down" aria-hidden="true" ng-show="vm.showBargainDetail"></i> <i class="fa fa-caret-right" aria-hidden="true" ng-show="!vm.showBargainDetail"></i> {{vm.itemDetail.bargainNum}} customers</a>
+                <div class="animate-show" ng-show="vm.showBargainDetail">
+                    <table class="table table-info table-hover" style="font-size: 13px;margin-bottom:0px" >
+                        <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Trade Item</td>
+                                <td>Create Date</td>
+                                <td>Expire Date</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a ui-sref='shareeconomy.visitorReview'>Yinyu Niu</a></td>
+                                <td>Item Id:<a> 12051 </a>+ $86</td>
+                                <td>06/27/2016</td>
+                                <td>07/01/2016</td>
+                            </tr>
+                            <tr>
+                                <td><a ui-sref='shareeconomy.visitorReview'>Rui Li</a></td>
+                                <td>Item Id:<a> 11655</a></td>
+                                <td>05/27/2016</td>
+                                <td>06/01/2016</td>
+                            </tr>
+                            <tr>
+                                <td><a ui-sref='shareeconomy.visitorReview'>David</a></td>
+                                <td>Item Id:<a> 13789</a></td>
+                                <td>05/27/2016</td>
+                                <td>06/01/2016</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
+                <br>
+                <label style="">Seller EST Price:</label> <span style="font-size:16px;color:#f2ae44">${{vm.itemDetail.sellerEstPrice}} </span>
+                <br>
+                <label style="">Brand New Item in Market:</label> <span style="font-size:16px;color:#f2ae44">${{vm.itemDetail.newItemPrice}}  </span><a style="padding-left:10px" href="https://www.amazon.com/dp/B01BGC39JY/ref=s9_acss_bw_hsb_TVBBWK35_s3_n?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-3&pf_rd_r=YTR1AECWZFHENKVZHY8G&pf_rd_t=101&pf_rd_p=2596992402&pf_rd_i=1266092011" target="_blank"> Check same item in amazon</a>
+                <br>
+                <label>Items Description:</label>
+                <br>
+                <panel class="col-lg-12" style='font-size: 13px'>
+                    <ul style="padding-left:20px">
+                        <li ng-repeat='description in vm.itemDetail.descriptions' style="text-align:justify">
+                            {{description}}
+                        </li>
+                    </ul>
+                </panel>
             </div>
         </div>
 	    <div class="col-lg-3" style="margin-top:50px">
@@ -93,6 +134,13 @@
                 box-type = "right"
                 right-class='col-lg-4'>
             <span class="glyphicon glyphicon-remove" style="float:right;cursor: pointer;" ng-click="vm.closeAnswerModal('#answerModal')"></span>
+            <div class="lightbox-body" ng-include="'app/feature/itemDetail/modal/addAnswerModal.html'"></div>
+        </snap-lightbox>
+        <snap-lightbox
+                box-id = "bargainWithModal"
+                box-type = "right"
+                right-class='col-lg-6'>
+            <span class="glyphicon glyphicon-remove" style="float:right;cursor: pointer;" ng-click="vm.closeBargainWithModal('#bargainWithModal')"></span>
             <div class="lightbox-body" ng-include="'app/feature/itemDetail/modal/addAnswerModal.html'"></div>
         </snap-lightbox>
     </div>
