--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
         <title>My Index</title>
         <base href="/">
         <!--<link rel="stylesheet" href="http://usmlrs1297.arrow.com:7781/snap/assets/ui/styles/snap.css">-->
-        <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <!-- <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"> -->
         <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/client/style/app.css">
         <link rel="stylesheet" href="/bower_components/font-awesome-animation/dist/font-awesome-animation.min.css">
@@ -13,14 +14,18 @@
     <body ng-app="app" >
         <div  ui-view style="" class="div-center"></div>
         <!--bower-->
-        <script src="/bower_components/angular/angular.min.js"></script>
+        <!-- <script src="/bower_components/angular/angular.min.js"></script> -->
+        <!-- <script src="/bower_components/angular-animate/angular-animate.min.js"></script> -->
+        
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
+        <!-- <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> -->
+        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.1.3.js"></script>
+        <script src="/bower_components/angular-sanitize//angular-sanitize.min.js"></script>
         <script src="/bower_components/jquery/dist/jquery.min.js"></script>
         <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
         <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-        <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
-        <script src="/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
         <script src="/node_modules/chart.js/dist/Chart.min.js"></script>
         <script src="/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
         <!--lib-->
