--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,7 +7,7 @@
         <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> -->
         <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/client/style/app.css">
+        <link rel="stylesheet" href="/src/client/style/app.css">
         <link rel="stylesheet" href="/bower_components/font-awesome-animation/dist/font-awesome-animation.min.css">
 
     </header>
@@ -28,51 +28,51 @@
         <script src="/node_modules/chart.js/dist/Chart.min.js"></script>
         <script src="/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
         <!--lib-->
-        <script src="/client/app/components/lib/lib.js"></script>
+        <script src="/src/client/app/components/lib/lib.js"></script>
         <!--router-->
-        <script src="/client/app/app.router.js"></script>
+        <script src="/src/client/app/app.router.js"></script>
         <!--module-->
-        <script src="/client/app/app.module.js"></script>
-        <script src="/client/app/components/components.module.js"></script>
-        <script src="/client/app/services/services.module.js"></script>
-        <script src="/client/app/components/popOver/popOver.module.js"></script>
-        <script src="/client/app/shareUtil/util.module.js"></script>
-        <script src="/client/app/feature/shared/shared.module.js"></script>
-        <script src="/client/app/feature/signIn/signIn.module.js"></script>
-        <script src="/client/app/feature/registerAccount/registerAccount.module.js"></script>
-        <script src="/client/app/feature/layout/layout.module.js"></script>
-        <script src="/client/app/feature/homePage/homePage.module.js"></script>
-        <script src="/client/app/feature/shoppingCart/shoppingCart.module.js"></script>
-        <script src="/client/app/feature/proceedCheckout/proceedCheckout.module.js"></script>
-        <script src="/client/app/feature/myAccount/myAccount.module.js"></script>
-        <script src="/client/app/feature/lists/lists.module.js"></script>
-        <script src="/client/app/feature/ownedItems/ownedItems.module.js"></script>
-        <script src="/client/app/feature/messageCenter/messageCenter.module.js"></script>
-        <script src="/client/app/feature/accountReviewByVisitors/visitorReview.module.js"></script>
-        <script src="/client/app/feature/itemDetail/itemDetail.module.js"></script>
+        <script src="/src/client/app/app.module.js"></script>
+        <script src="/src/client/app/components/components.module.js"></script>
+        <script src="/src/client/app/services/services.module.js"></script>
+        <script src="/src/client/app/components/popOver/popOver.module.js"></script>
+        <script src="/src/client/app/shareUtil/util.module.js"></script>
+        <script src="/src/client/app/feature/shared/shared.module.js"></script>
+        <script src="/src/client/app/feature/signIn/signIn.module.js"></script>
+        <script src="/src/client/app/feature/registerAccount/registerAccount.module.js"></script>
+        <script src="/src/client/app/feature/layout/layout.module.js"></script>
+        <script src="/src/client/app/feature/homePage/homePage.module.js"></script>
+        <script src="/src/client/app/feature/shoppingCart/shoppingCart.module.js"></script>
+        <script src="/src/client/app/feature/proceedCheckout/proceedCheckout.module.js"></script>
+        <script src="/src/client/app/feature/myAccount/myAccount.module.js"></script>
+        <script src="/src/client/app/feature/lists/lists.module.js"></script>
+        <script src="/src/client/app/feature/ownedItems/ownedItems.module.js"></script>
+        <script src="/src/client/app/feature/messageCenter/messageCenter.module.js"></script>
+        <script src="/src/client/app/feature/accountReviewByVisitors/visitorReview.module.js"></script>
+        <script src="/src/client/app/feature/itemDetail/itemDetail.module.js"></script>
         <!--directive-->
-        <script src="/client/app/feature/shared/commentModalDirective/commentModal.directive.js"></script>
-        <script src="/client/app/components/popOver/popOver.directive.js"></script>
-        <script src="/client/app/components/breadcrumbs/breadcrumbs.directive.js"></script>
-        <script src="/client/app/feature/signIn/signIn.directive.js"></script>
-        <script src="/client/app/feature/registerAccount/registerAccount.directive.js"></script>
-        <script src="/client/app/feature/layout/layout.directive.js"></script>
-        <script src="/client/app/feature/homePage/homePage.directive.js"></script>
-        <script src="/client/app/feature/homePage/homeCategories/homeCategories.directive.js"></script>
-        <script src="/client/app/feature/shoppingCart/shoppingCart.directive.js"></script>
-        <script src="/client/app/feature/proceedCheckout/proceedCheckout.directive.js"></script>
-        <script src="/client/app/feature/myAccount/myAccount.directive.js"></script>
-        <script src="/client/app/feature/ownedItems/ownedItems.directive.js"></script>
-        <script src="/client/app/feature/messageCenter/messageCenter.directive.js"></script>
-        <script src="/client/app/feature/messageCenter/messageInbox.directive.js"></script>
-        <script src="/client/app/feature/messageCenter/messageSent.directive.js"></script>
-        <script src="/client/app/feature/messageCenter/date.filter.js"></script>
-        <script src="/client/app/feature/lists/wishList.directive.js"></script>
-        <script src="/client/app/feature/lists/waitList.directive.js"></script>
-        <script src="/client/app/feature/accountReviewByVisitors/visitorReview.directive.js"></script>
-        <script src="/client/app/feature/itemDetail/itemDetail.directive.js"></script>
+        <script src="/src/client/app/feature/shared/commentModalDirective/commentModal.directive.js"></script>
+        <script src="/src/client/app/components/popOver/popOver.directive.js"></script>
+        <script src="/src/client/app/components/breadcrumbs/breadcrumbs.directive.js"></script>
+        <script src="/src/client/app/feature/signIn/signIn.directive.js"></script>
+        <script src="/src/client/app/feature/registerAccount/registerAccount.directive.js"></script>
+        <script src="/src/client/app/feature/layout/layout.directive.js"></script>
+        <script src="/src/client/app/feature/homePage/homePage.directive.js"></script>
+        <script src="/src/client/app/feature/homePage/homeCategories/homeCategories.directive.js"></script>
+        <script src="/src/client/app/feature/shoppingCart/shoppingCart.directive.js"></script>
+        <script src="/src/client/app/feature/proceedCheckout/proceedCheckout.directive.js"></script>
+        <script src="/src/client/app/feature/myAccount/myAccount.directive.js"></script>
+        <script src="/src/client/app/feature/ownedItems/ownedItems.directive.js"></script>
+        <script src="/src/client/app/feature/messageCenter/messageCenter.directive.js"></script>
+        <script src="/src/client/app/feature/messageCenter/messageInbox.directive.js"></script>
+        <script src="/src/client/app/feature/messageCenter/messageSent.directive.js"></script>
+        <script src="/src/client/app/feature/messageCenter/date.filter.js"></script>
+        <script src="/src/client/app/feature/lists/wishList.directive.js"></script>
+        <script src="/src/client/app/feature/lists/waitList.directive.js"></script>
+        <script src="/src/client/app/feature/accountReviewByVisitors/visitorReview.directive.js"></script>
+        <script src="/src/client/app/feature/itemDetail/itemDetail.directive.js"></script>
         <!--service-->
-        <script src="/client/app/services/shoppingCart.service.js"></script>
-        <script src="/client/app/shareUtil/util.service.js"></script>
+        <script src="/src/client/app/services/shoppingCart.service.js"></script>
+        <script src="/src/client/app/shareUtil/util.service.js"></script>
     </body>
 </html>
